kustomize/overlays/qa/microservice2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: microservice2
  namespace: qa-namespace
spec:
  to:
    kind: Service
    name: microservice2
    weight: 100
  host: microservice2-qa.qa.apps.rohit-redhat-sno-adventures.rtaneja.lan
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
